--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
