--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,19 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap"
     />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7840500895207824"
+      crossorigin="anonymous"
+    ></script>
     <link rel="icon" href="%PUBLIC_URL%/pzinho.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Plus FM - Aqui é legal demais." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/pzinho.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/pzinho.svg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/pzinho.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
