--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
     <link rel="icon" href="%PUBLIC_URL%/pzinho.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Plus FM - Aqui é legal demais." />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/pzinho.svg" />
-    <meta property="og:image" content="%PUBLIC_URL%/pzinho.svg" />
+    <meta property="og:title" content="__OG_TITLE__" />
+    <meta property="og:description" content="__OG_DESCRIPTION__" />
     <meta name="twitter:image" content="%PUBLIC_URL%/pzinho.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -52,5 +53,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
