--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,12 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/pzinho.svg" />
-    <meta property="og:title" content="__OG_TITLE__" />
-    <meta property="og:description" content="__OG_DESCRIPTION__" />
+    <meta property="og:title" content="Plus FM" />
+    <meta
+      property="og:description"
+      content="
+    Aqui é legal demais!"
+    />
     <meta name="twitter:image" content="%PUBLIC_URL%/pzinho.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -53,6 +57,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
   </body>
 </html>
